<resources>
    <string name="app_name">IS4401-FinalYearProject</string>
    <string name="companyLogo">Company Logo</string>
    <string name="lblLogin">Login</string>
    <string name="txtEmailAddress">Email Address</string>
    <string name="txtPassword">Password</string>
    <string name="btnLogin">Login</string>
    <string name="lblRegister">New here? Register Now</string>
    <string name="lblSignUp">Register</string>
    <string name="txtFullName">Full Name</string>
    <string name="txtEmployeeId">Employee ID</string>
    <string name="btnRegister">Register</string>
    <string name="btnInventory">View Inventory</string>
    <string name="btnClock">Clock In/Out</string>
    <string name="btnView">View Schedule</string>
    <string name="lblEditEmployee">Edit Employee</string>
    <string name="lblEmployeeSearch">Please search for an employee name below:</string>
    <string name="btnAdd">Add Product</string>
    <string name="btnAddEmployee">Add Employee</string>
    <string name="btnProductCheck">Product Check</string>
    <string name="btnCreateList">Create List</string>
    <string name="lblMenu">Menu</string>
    <string name="lblMgtMenu">Management Menu</string>
    <string name="btnAddToList">Add To List</string>
    <string name="btnEditEmployee">Edit Employee</string>
    <string name="txtListItem">Type a Product Name</string>
    <string name="lblProductList">Product List</string>
    <string name="lblInventory">Inventory</string>
    <string name="lblClockInOptions">Please Choose an Option Below:</string>
    <string name="btnStartShift">In</string>
    <string name="btnEndShift">Out</string>
    <string name="btnStartBreak">Start of Break</string>
    <string name="btnEndBreak">End of Break</string>
    <string name="lblStartShift">test</string>
    <string name="lblEndShift">test</string>
    <string name="lblStartBreak">test</string>
    <string name="lblEndBreak">test</string>
    <string name="txtPosition">Position</string>
    <string name="txtPhone">Phone Number</string>
    <string name="lblProductSearch">Product Search</string>
    <string name="lblAddtoInventory">Add To Inventory</string>
    <string name="txtProductName">Product Name</string>
    <string name="lblProductName">Name:</string>
    <string name="lblQuantity">Quantity:</string>
    <string name="lblPrice">Price:</string>
    <string name="lblDescription">Description:</string>
    <string name="txtProductDescription">Description</string>
    <string name="txtProductPrice">Price</string>
    <string name="txtProductQuantity">Quantity</string>
    <string name="btnAddToInventory">Add Product</string>
    <string name="btnAddSchedule">Add New Schedule</string>
    <string name="lblAddSchedule">Add New Schedule</string>
    <string name="hintMonday">Monday Hours</string>
    <string name="hintTuesday">Tuesday Hours</string>
    <string name="hintWednesday">Wednesday Hours</string>
    <string name="hintThursday">Thursday Hours</string>
    <string name="hintFriday">Friday Hours</string>
    <string name="txtEmployeeNameS">Employee Name</string>
    <string name="btnAddHours">Add Hours</string>
    <string name="lblHoursRequest">Request Hours Change</string>
    <string name="lblTimeOffRequest">Request Time Off</string>
    <string name="lblExistingHours">Enter the Hours you Wish to Change:</string>
    <string name="lblAccount">Account</string>
    <string name="lblTimeOff">Please select the month and week for your time off request:</string>
    <string name="btnRequestChange">Request Change</string>
    <string name="txtDate">Date</string>
    <string name="txtDay">Day</string>
    <string name="txtHours">Hours</string>
    <string name="txtAccountMenu">Account Menu</string>
    <string name="btnRequestHoursChange">Request Change to Hours</string>
    <string name="iconHome">Home</string>
    <string name="iconAccount">Account</string>
    <string name="iconSignOut">Sign Out</string>
    <string name="btnAuthenticate">Complete Authentication</string>
    <string name="txtAddEmployeeName">Enter Your Fullname Here</string>
    <string name="txtHiddenTextView">TextView</string>
    <string name="btnViewList">View Existing List Items</string>
    <string name="txtListName">Enter Product Here</string>
    <string name="btnAddList">Add</string>
    <string name="lblWorkSchedule">Work Schedule</string>
    <string name="lblWorkDetail">Please Search For Your Name Below:</string>
    <string name="hintName">Enter Employee Name here</string>
    <string name="btnUpdateInventory">Update Inventory</string>
    <string name="lblUpdateInventory">Update Inventory</string>
    <string name="txtSearch">Product Name</string>
    <string name="txtComments">Additional Comments</string>
    <string name="txtClockInName">Enter your Name Here</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="weekDays">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="date">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string name="txtWeekNumber">Week Number:</string>
    <string name="txtMonday">Monday:</string>
    <string name="btnRequestTimeOff">Request Time Off</string>
    <string name="btnViewProfile">View Profile</string>
    <string name="btnSubmitDocuments">Submit Documents</string>
    <string name="switchMorning">Morning</string>
    <string name="switchEvening">Evening</string>
    <string name="txtEmployeeName">Employee Name:</string>
    <string name="txtEmployeeid">Employee ID:</string>
    <string name="txtEmployeePosition">Position:</string>
    <string name="txtPhoneNumber">Phone Number:</string>
    <string name="txtEmail">Email:</string>
    <string name="lblUserProfile">Employee Info</string>
    <string name="btnRefresh">Refresh</string>
    <string name="hintSaturday">Saturday Hours</string>
    <string name="hintSunday">Sunday Hours</string>
    <string name="hintWeekNumber">Week Number</string>
    <string name="txtTuesday">Tuesday:</string>
    <string name="txtWednesday">Wednesday:</string>
    <string name="txtThursday">Thursday:</string>
    <string name="txtFriday">Friday:</string>
    <string name="txtSaturday">Saturday:</string>
    <string name="txtSunday">Sunday:</string>
    <string name="lblBarcode">Barcode:</string>
    <string name="btnDeleteRoster">Delete Roster</string>
    <string name="btnDeleteProduct">Delete Product</string>
    <string name="lblUpdateSchedule">Update Schedule</string>
    <string name="lblReviewTimeOffRequests">Review Time Off Requests</string>
    <string name="btnViewEdit">View + Edit Schedule</string>
    <string name="btnReviewTimeOffRequest">Review Time Off Requests</string>
    <string name="lblExistingLists">Existing List</string>
    <string name="btnUpdateProfile">Update Profile</string>
    <string name="lblUpdateUserProfile">Update User Profile</string>
    <string name="btnDeleteProfile">Delete Profile</string>
    <string name="lblPreferedShift">Preferred Shift:</string>
    <string name="lblEmployeeId">Employee Id:</string>
    <string name="lblFullName">Name:</string>
    <string name="lblPosition">Position:</string>
    <string name="lblMonday">Monday:</string>
    <string name="lblTuesday">Tuesday:</string>
    <string name="lblWednesday">Wednesday:</string>
    <string name="lblThursday">Thursday:</string>
    <string name="lblFriday">Friday:</string>
    <string name="lblSaturday">Saturday:</string>
    <string name="lblSunday">Sunday:</string>
    <string name="lblWeekNumber">Week Number:</string>
    <string name="lblEmployeeName">Name:</string>
    <string name="btnUpdateRoster">Update Roster</string>
    <string name="lblEmployeeEmail">Email:</string>
    <string name="lblDates">Dates:</string>
    <string name="lblReviewRequests">Review Requests</string>
    <string name="lblUser">User:</string>
    <string name="lblTimeOffList">Dates/Days:</string>
    <string name="btnApprove">Approve</string>
    <string name="btnDeny">Reject</string>
    <string name="lblEmployeeHolidayName">Name:</string>
    <string name="lblStatus">Status:</string>


    <string name="title_activity_register">RegisterActivity</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="employee_app_text">Employee App</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="employee_id">Employee ID</string>
    <string name="userEmail">Email</string>
    <string name="lblBarcodeScannerCode">Barcode Number:</string>
    <string name="lblTitle">Add Product to Inventory</string>
    <string name="lblProductDescription">Product Description:</string>
    <string name="btnSave">Add to Inventory</string>
    <string name="title_activity_maps">Map</string>

</resources>