<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints="@string/txtProductName"
    tools:context=".AddSchedule">


    <EditText
        android:id="@+id/txtTuesday"
        android:layout_width="293dp"
        android:layout_height="44dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/txtProductDescription"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/hintTuesday"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMonday" />

    <EditText
        android:id="@+id/txtFriday"
        android:layout_width="293dp"
        android:layout_height="44dp"
        android:layout_marginTop="84dp"
        android:autofillHints="@string/txtProductQuantity"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/hintFriday"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWednesday" />

    <EditText
        android:id="@+id/txtThursday"
        android:layout_width="293dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/txtProductQuantity"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/hintThursday"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWednesday" />

    <EditText
        android:id="@+id/txtMonday"
        android:layout_width="293dp"
        android:layout_height="44dp"
        android:layout_marginTop="144dp"
        android:autofillHints="@string/txtProductName"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/hintMonday"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <EditText
        android:id="@+id/txtEmpName"
        android:layout_width="293dp"
        android:layout_height="44dp"
        android:layout_marginTop="64dp"
        android:autofillHints="@string/txtProductName"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/txtEmployeeNameS"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <EditText
        android:id="@+id/txtWednesday"
        android:layout_width="293dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/txtProductPrice"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/hintWednesday"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTuesday" />

    <Button
        android:id="@+id/btnAddToSchedule"
        android:layout_width="143dp"
        android:layout_height="43dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/btnAddHours"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/lblAddSchedule"
        android:textColor="#0E0E0E"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>