<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frmRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SignupScreen">

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="152dp"
        android:text="@string/btnRegister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/companyLogoRegister"
        android:layout_width="127dp"
        android:layout_height="120dp"
        android:layout_marginStart="142dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/companyLogo"
        app:layout_constraintBottom_toTopOf="@+id/lblSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/ic_logo_foreground" />

    <EditText
        android:id="@+id/txtEmployeeId"
        android:layout_width="246dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="@string/txtEmployeeId"
        android:ems="10"
        android:hint="@string/txtEmployeeId"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="242dp"
        android:layout_height="44dp"
        android:layout_marginBottom="29dp"
        android:autofillHints="@string/txtPassword"
        android:ems="10"
        android:hint="@string/txtPassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/lblSignUp"
        android:textColor="#121111"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtFullName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="243dp"
        android:layout_height="45dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="@string/txtEmailAddress"
        android:ems="10"
        android:hint="@string/txtEmailAddress"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/txtPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtFullName"
        android:layout_width="245dp"
        android:layout_height="44dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="@string/txtFullName"
        android:ems="10"
        android:hint="@string/txtFullName"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/txtEmployeeId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>