<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Menus.ManagementMainMenu">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="355dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:background="#00000000"
        android:drawableEnd="@drawable/ic_baseline_person_24"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnViewSchedule"
        android:layout_width="140dp"
        android:layout_height="85dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="47dp"
        android:background="#3A82C9"
        android:drawableStart="@drawable/ic_baseline_table_view_24"
        android:text="@string/btnViewEdit"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnViewInventory"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/lblMgtMenu"
        android:textColor="#070707"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnViewInventory"
        android:layout_width="140dp"
        android:layout_height="85dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="46dp"
        android:background="#3A82C9"
        android:drawableStart="@drawable/ic_baseline_edit_24"
        android:text="@string/btnEditEmployee"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateList"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnAddProduct"
        android:layout_width="140dp"
        android:layout_height="85dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="45dp"
        android:background="#3A82C9"
        android:drawableStart="@drawable/ic_baseline_add_24"
        android:text="@string/btnAddEmployee"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnProductCheck"
        app:layout_constraintEnd_toStartOf="@+id/btnViewInventory"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAddSchedule"
        android:layout_width="140dp"
        android:layout_height="85dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="48dp"
        android:background="#3A82C9"
        android:drawableStart="@drawable/ic_baseline_add_24"
        android:text="@string/btnAddSchedule"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnAddProduct"
        app:layout_constraintEnd_toStartOf="@+id/btnViewSchedule"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnProductCheck"
        android:layout_width="140dp"
        android:layout_height="85dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="209dp"
        android:background="#3A82C9"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:text="@string/btnProductCheck"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCreateList"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCreateList"
        android:layout_width="140dp"
        android:layout_height="85dp"
        android:layout_marginBottom="208dp"
        android:background="#3A82C9"
        android:drawableStart="@drawable/ic_baseline_edit_24"
        android:text="@string/btnReviewTimeOffRequest"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorBlue"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_management_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>